kubernetes/apps/observability/kube-prometheus-stack/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: observability
  name: prometheus
spec:
  ingressClassName: internal
  rules:
  - host: prometheus.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
